# escape

./: .gitignore  Cargo.toml  LICENSE  README.md  bold.json  config  config_sample.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
configs/: AB_View_5.json  AB_View_6.json  alex_views.json  color_7_flag.json  color_7_purple.json  color_8.json  config_sample.json
configs/draw_configs/: color_1.json  color_4.json  color_6.json  color_7_cream.json  color_8.json
configs/sample_configs/: AB_View_1.json  AB_View_2.json  AB_View_3.json  AB_View_4.json  AB_View_6.json  Whole_View.json
configs/stl_configs/: stl_6.json
scripts/: README.md  gen_study.py  generate_stl.sh
scripts/head_zoom/: color.json  gen_zoom.py
scripts/julia_circle/: color.json  gen_circle.py  view.json
scripts/m_circle/: color.json  gen_circle.py
scripts/table/: gen_table.py  sample.json
src/: cli_options.rs  comptroller.rs  config.rs  draw.rs  error.rs  grid.rs  histogram_result.rs  main.rs  orbit.rs  sample.rs  stl.rs  stop_switch.rs  types.rs  view_config.rs  worker.rs
