[package]
name = "escape"
version = "0.1.0"
authors = ["RussellBentley <russell.w.bentley@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
nalgebra = "0.24.0"
num-traits = "0.2.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
structopt = "0.3.21"
thiserror = "1.0.23"
tokio = { version = "1.0.2", features = ["full"] }
rand = "0.8.2"