[package]
name = "escape"
version = "0.1.0"
authors = ["RussellBentley <russell.w.bentley@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
nalgebra = { version = "0.24.0", features = ["serde-serialize"]}
num-traits = "0.2.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
structopt = "0.3.21"
thiserror = "1.0.23"
tokio = { version = "1.1.0", features = ["full"] }
rand = "0.8.2"
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
parking_lot = "0.11.1"
stl_io = "0.6.0"